refactor PathTools